// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a copy of ExpenseSummary with 1 expense totalled 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    £2.35
  </h1>
</div>
`;

exports[`should render a copy of ExpenseSummary with multiple expenses totalled 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    £235,112.51
  </h1>
</div>
`;
